--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@google/genai": "^0.9.0",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.7",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.494.0",
     "mime": "^4.0.7",
     "react": "^19.0.0",
