--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^11.7.1",
     "lucide-react": "^0.494.0",
     "mime": "^4.0.7",
     "next-themes": "^0.4.6",
